// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-document-domains should add and then get domains for a valid document 1`] = `
{
  "content": [
    {
      "text": "{"defaultIsoCode":null,"domains":[{"domainName":"example.com","isoCode":"en-US"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-document-domains should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"defaultIsoCode":null,"domains":[]}",
      "type": "text",
    },
  ],
}
`;
